--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,6 +48,7 @@ classifiers = [
 dependencies = [
     "hidapi>=0.10.0",
     "evdev>=1.4.0",
+    "pyusb>=1.2.0",
     "PyQt6>=6.4.0",
     "pynput>=1.7.0",
     "Pillow>=9.0.0",
